# chess

./: LICENSE  README.md
chess_backend/: Cargo.toml  README.md
chess_backend/c_lib/targets/: king.c  knight.c  pawn.c  sliders.c
chess_backend/src/: board.rs  lib.rs
chess_backend/src/tests/: fen.rs  mod.rs
chess_backend/src/utils/: fen.rs  mod.rs  san.rs
chess_engine/: Cargo.toml  README.md
chess_engine/src/: main.rs
chess_engine/src/engine/: mod.rs  opening_book.rs  tree.rs
chess_engine/src/engine/heuristics/: evaluation.rs  mod.rs  modifiers.rs  priority.rs
chess_engine/src/engine/utils/: error.rs  eval.rs  mod.rs
chess_engine/src/tests/: mod.rs  san.rs
chess_openings/: Cargo.toml  README.md
chess_openings/src/: main.rs
