[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_backend = { path = "../chess_backend" }
const_for = "0.1.5"
env_logger = "0.11.6"
log = "0.4.22"
num_cpus = "1.16.0"
sqlite = "0.36.1"
threadpool = "1.8.1"
